# C_MultiThread_Templates

./: .gitignore  CMakeLists.txt  ConsoleMenuOptions.c  ConsoleMenuOptions.h  LICENSE  MultiThreadSupport.c  MultiThreadSupport.h  README.md  projectsStructure.txt
C_MultiThread_Template/: MultiThread_Template_main.c  TestAnotherApproach.h
Lib/: SimpleTimerWP.c  fileHandle.c  fileHandle.h  type_def.h
ProtocolDevelopingTest/: ProtocolMasterImmitationDevelopeTest_main.c  ProtocolSlaveImmitationDevelopeTest_main.c  globDefines.cmake
ProtocolDevelopingTest/HardwarePeripheral/: HardwareInterfaceUnit.c  HardwareInterfaceUnit.h
ProtocolDevelopingTest/IO_immitationBetweenMasterSlave/: CmdsScenarioScripts.c  CmdsScenarioScripts.h  MasterImmitationCfg.h  PortNumRegister.txt  PortsBusMessages.h  SlaveImmitationCfg.h  globMutexHold.txt  globScanfMutex.txt  ioclientsocket.c  iofile.txt  ioserversocket.c  iosocket.h
ProtocolDevelopingTest/ProtocolMasterDevelopeTest/: CMakeLists.txt  ProtocolMasterDevelopeTest.sln  README.md
ProtocolDevelopingTest/ProtocolSlaveDevelopeTest/: CMakeLists.txt  ProtocolSlaveDevelopeTest.sln  README.md
